Fixed text align
In Mobile CSS

--- a/src/main.css
+++ b/src/main.css
@@ -478,6 +478,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   position: relative;
+  text-align: center;
   left: 50%;
   transform: translateX(-50%);
   box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
